fix spacing between elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,9 +35,9 @@ h1 {
 .text-group {
   background-color: var(--atom-grey);
   border: 4px solid grey;
-  height: 60vh;
+  height: 50vh;
   border-radius: 10px;
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
   text-align: center;
   padding: 0.5em 0;
   font-size: 3rem;
